# xbrlkit

./: .gitignore  AGENTS.md  CHANGELOG.md  CLA.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  REPO_TREE.txt  SECURITY.md  codecov.yml  deny.toml  fix_numeric_rules.py
.github/: labels.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: batch-pr-cleanup.md  bug_report.yml  implementation-task.md  research-and-planning.md  research-spike.md  scenario-activation.md  slice_request.yml
.github/workflows/: ci.yml  cla.yml  coverage.yml
.kimi/friction/: scan-results.md
.kimi/notes/: required-facts-research.md
.llm/: contextpack.yaml
.mend/: README.md  active-work.md  active.md  agentic-sdlc-workflow.md  autonomous-labels.md  autonomous-log.md  friction.md  mission.md  nnl.md  pr-queue.md  roadmap-phase-2.md  roadmap-phase-3.md  scheduler-state.json  session-log.md  todo.md  wave-report.yaml  wave-status.jsonl  workflow.md
.mend/agents/: agentic-final.md  agentic-friction.md  agentic-observability.md  builder-implement.md  deep-edge.md  deep-perf.md  maintainer-alignment.md  merger-final-signoff.md  merger-final.md  planner-initial.md  quality-clippy.md  quality-docs.md  quality-final.md  quality-patterns.md  reviewer-agentic.md  reviewer-arch.md  reviewer-deep-plan.md  reviewer-deep.md  reviewer-integ.md  reviewer-plan.md  reviewer-quality.md  reviewer-repo-alignment.md  reviewer-tests.md  scout-issue-finder.md  tests-alpha.md  tests-unit.md
.mend/friction/: 2026-03-23-pr26-clippy.md
.mend/handoffs/: ISSUE-233.md  ISSUE-286.md  SCN-XK-WORKFLOW-003.md
.mend/notes/: 2026-03-21-maintenance.md  alpha-gate-scenario.md  bundle-impact-docs.md  bundle-scenarios.md  cockpit-pack.md  context-completeness-plan.md  context-completeness-research.md  decimal-precision-plan.md  decimal-precision-research.md  describe-profile-json.md  feature-grid.md  filing-manifest.md  issue-7-research.md  legacy-pr-cleanup-summary.md  maintainer-docs.md  plan-negative-values.md  queue-check-2026-03-26.md  research-negative-values.md  research-required-facts.md  scout-issue-placeholders.md  scout-issue-sec.md  scout-issue-workflow.md  streaming-parser-research.md  taxonomy-http-fetching.md  typed-member-handling.md  typed-value-validation.md  unit-consistency-plan.md  unit-consistency-research.md  xbrl-dimensions-research.md  xbrlkit-scout-report-2026-04-06.md  xbrlkit-scout-report.md
.mend/patterns/: mining-report.md
.mend/plans/: ISSUE-100.md  ISSUE-101.md  ISSUE-102-review.md  ISSUE-102.md  ISSUE-113.md  ISSUE-115.md  ISSUE-116.md  ISSUE-118.md  ISSUE-149.md  ISSUE-151.md  ISSUE-153.md  ISSUE-154.md  ISSUE-155.md  ISSUE-176.md  ISSUE-177.md  ISSUE-178.md  ISSUE-179.md  ISSUE-210.md  ISSUE-213.md  ISSUE-229.md  ISSUE-233.md  ISSUE-243.md  ISSUE-246.md  ISSUE-248-review.md  ISSUE-248.md  ISSUE-249.md  ISSUE-251.md  ISSUE-252-deep-review.md  ISSUE-252.md  (+3 more)
adr/: 007-taxonomy-loader-http-client.md  ADR-001-scenario-driven-workspace.md  ADR-002-canonical-report-model.md  ADR-003-profile-packs-as-data.md  ADR-004-semantic-microcrate-boundaries.md  ADR-005-receipts-as-public-contracts.md  ADR-006-no-live-network-in-bdd.md  ADR-007-validation-pattern-sec-rules.md  ADR-008-taxonomy-loader-http-client.md
benches/: Cargo.toml
benches/benches/: dts_resolution.rs  taxonomy_loader.rs  validation_pipeline.rs
corpus/: README.md
crates/cockpit-export/: Cargo.toml  README.md
crates/cockpit-export/src/: lib.rs
crates/context-completeness/: Cargo.toml  README.md
crates/context-completeness/src/: lib.rs
crates/diff-run/: Cargo.toml  README.md
crates/diff-run/src/: lib.rs
crates/dimensional-rules/: Cargo.toml  README.md
crates/dimensional-rules/src/: lib.rs
crates/efm-rules/: Cargo.toml  README.md
crates/efm-rules/src/: lib.rs
crates/export-run/: Cargo.toml  README.md
crates/export-run/src/: lib.rs
crates/filing-load/: Cargo.toml  README.md
crates/filing-load/src/: lib.rs
crates/ixds-assemble/: Cargo.toml  README.md
crates/ixds-assemble/src/: lib.rs
crates/oim-normalize/: Cargo.toml  README.md
crates/oim-normalize/src/: lib.rs
crates/scenario-contract/: Cargo.toml  README.md
crates/scenario-contract/src/: lib.rs
crates/scenario-runner/: Cargo.toml
crates/scenario-runner/src/: lib.rs
crates/sec-profile-types/: Cargo.toml  README.md
crates/sec-profile-types/src/: lib.rs
crates/taxonomy-dimensions/: Cargo.toml  README.md
crates/taxonomy-dimensions/src/: lib.rs
crates/taxonomy-dts/: Cargo.toml  README.md
crates/taxonomy-dts/src/: lib.rs
crates/taxonomy-loader/: Cargo.toml  README.md
crates/taxonomy-loader/src/: error.rs  lib.rs  linkbase.rs  schema.rs  xml_util.rs
crates/unit-rules/: Cargo.toml  README.md
crates/unit-rules/src/: lib.rs  patterns.rs  validator.rs
crates/validation-run/: Cargo.toml  README.md
crates/validation-run/src/: lib.rs
crates/xbrl-stream/: Cargo.toml  README.md
crates/xbrl-stream/src/: lib.rs
crates/xbrlkit-bdd/: Cargo.toml
crates/xbrlkit-bdd-steps/: Cargo.toml
crates/xbrlkit-bdd-steps/src/: given.rs  given_steps.rs  lib.rs  parsing.rs  then.rs  then_steps.rs  types.rs  utils.rs  when.rs  when_steps.rs  world.rs
crates/xbrlkit-bdd/src/: lib.rs
crates/xbrlkit-bench/: Cargo.toml
crates/xbrlkit-bench/benches/: dts_resolution.rs  taxonomy_loader.rs  validation_pipeline.rs
crates/xbrlkit-bench/src/: lib.rs
crates/xbrlkit-cli/: Cargo.toml  README.md
crates/xbrlkit-cli/src/: main.rs
crates/xbrlkit-core/: Cargo.toml  README.md
crates/xbrlkit-core/src/: lib.rs
crates/xbrlkit-feature-grid/: Cargo.toml
crates/xbrlkit-feature-grid/src/: lib.rs
docs/: MAINTAINER_VISION.md  STATUS.md
fixtures/: README.md
fuzz/: README.md
plans/: implementation-roadmap.md
scripts/: autonomous-pr.sh  check-scenario-activation.sh  pre-push.sh  update-queue.sh  workflow-check.sh
specs/: devex_flows.yaml  spec_ledger.yaml
templates/: cockpit.comment.v1.md  oracle.compare.v1.md  validation.summary.v1.md
tests/: README.md
xtask/: Cargo.toml
xtask/src/: alpha_check.rs  main.rs  schema_check.rs
(+230 files in other folders)
