[workspace]
resolver = "2"
members = [
  "benches",
  "crates/receipt-types",
  "crates/scenario-contract",
  "crates/scenario-runner",
  "crates/taxonomy-types",
  "crates/sec-profile-types",
  "crates/xbrl-report-types",
  "crates/xbrlkit-feature-grid",
  "crates/xbrlkit-test-grid",
  "crates/xbrlkit-bdd",
  "crates/xbrlkit-bdd-steps",
  "crates/xbrlkit-interop-tests",
  "crates/edgar-identity",
  "crates/edgar-sgml",
  "crates/edgar-attachments",
  "crates/ixhtml-scan",
  "crates/ixds-assemble",
  "crates/xbrl-contexts",
  "crates/xbrl-units",
  "crates/xbrl-dimensions",
  "crates/xbrl-linkbases",
  "crates/duplicate-facts",
  "crates/taxonomy-package",
  "crates/taxonomy-dts",
  "crates/calc11",
  "crates/efm-rules",
  "crates/oim-normalize",
  "crates/filing-load",
  "crates/validation-run",
  "crates/export-run",
  "crates/diff-run",
  "crates/oracle-compare",
  "crates/sec-http",
  "crates/corpus-fs",
  "crates/taxonomy-cache",
  "crates/archive-zip",
  "crates/render-json",
  "crates/render-md",
  "crates/cockpit-export",
  "crates/xbrlkit-conform",
  "crates/xbrlkit-core",
  "crates/xbrlkit-cli",
  "xtask",
  "crates/taxonomy-dimensions",
  "crates/dimensional-rules",
  "crates/numeric-rules",
  "crates/unit-rules",
  "crates/context-completeness",
  "crates/taxonomy-loader",
  "crates/xbrl-stream",
]
default-members = ["crates/xbrlkit-cli", "xtask"]

[workspace.package]
edition = "2024"
version = "0.1.0-alpha.1"
license = "AGPL-3.0-or-later"
rust-version = "1.92"
authors = ["EffortlessMetrics"]
repository = "https://github.com/EffortlessMetrics/xbrlkit"
description = "XBRL parsing, validation, and analysis toolkit"

[workspace.dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.38", features = ["derive"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_yaml = "0.9.34"
thiserror = "2.0.12"
tokio = { version = "1.44", features = ["rt-multi-thread", "macros", "sync"] }
walkdir = "2.5.0"
criterion = "0.5.1"
archive-zip = { version = "0.1.0-alpha.1", path = "crates/archive-zip" }
calc11 = { version = "0.1.0-alpha.1", path = "crates/calc11" }
cockpit-export = { version = "0.1.0-alpha.1", path = "crates/cockpit-export" }
context-completeness = { version = "0.1.0-alpha.1", path = "crates/context-completeness" }
corpus-fs = { version = "0.1.0-alpha.1", path = "crates/corpus-fs" }
diff-run = { version = "0.1.0-alpha.1", path = "crates/diff-run" }
dimensional-rules = { version = "0.1.0-alpha.1", path = "crates/dimensional-rules" }
duplicate-facts = { version = "0.1.0-alpha.1", path = "crates/duplicate-facts" }
edgar-attachments = { version = "0.1.0-alpha.1", path = "crates/edgar-attachments" }
edgar-identity = { version = "0.1.0-alpha.1", path = "crates/edgar-identity" }
edgar-sgml = { version = "0.1.0-alpha.1", path = "crates/edgar-sgml" }
efm-rules = { version = "0.1.0-alpha.1", path = "crates/efm-rules" }
export-run = { version = "0.1.0-alpha.1", path = "crates/export-run" }
filing-load = { version = "0.1.0-alpha.1", path = "crates/filing-load" }
ixds-assemble = { version = "0.1.0-alpha.1", path = "crates/ixds-assemble" }
ixhtml-scan = { version = "0.1.0-alpha.1", path = "crates/ixhtml-scan" }
numeric-rules = { version = "0.1.0-alpha.1", path = "crates/numeric-rules" }
oim-normalize = { version = "0.1.0-alpha.1", path = "crates/oim-normalize" }
oracle-compare = { version = "0.1.0-alpha.1", path = "crates/oracle-compare" }
receipt-types = { version = "0.1.0-alpha.1", path = "crates/receipt-types" }
render-json = { version = "0.1.0-alpha.1", path = "crates/render-json" }
render-md = { version = "0.1.0-alpha.1", path = "crates/render-md" }
scenario-contract = { version = "0.1.0-alpha.1", path = "crates/scenario-contract" }
scenario-runner = { version = "0.1.0-alpha.1", path = "crates/scenario-runner" }
sec-http = { version = "0.1.0-alpha.1", path = "crates/sec-http" }
sec-profile-types = { version = "0.1.0-alpha.1", path = "crates/sec-profile-types" }
taxonomy-cache = { version = "0.1.0-alpha.1", path = "crates/taxonomy-cache" }
taxonomy-dimensions = { version = "0.1.0-alpha.1", path = "crates/taxonomy-dimensions" }
taxonomy-dts = { version = "0.1.0-alpha.1", path = "crates/taxonomy-dts" }
taxonomy-loader = { version = "0.1.0-alpha.1", path = "crates/taxonomy-loader" }
taxonomy-package = { version = "0.1.0-alpha.1", path = "crates/taxonomy-package" }
taxonomy-types = { version = "0.1.0-alpha.1", path = "crates/taxonomy-types" }
unit-rules = { version = "0.1.0-alpha.1", path = "crates/unit-rules" }
validation-run = { version = "0.1.0-alpha.1", path = "crates/validation-run" }
xbrl-contexts = { version = "0.1.0-alpha.1", path = "crates/xbrl-contexts" }
xbrl-dimensions = { version = "0.1.0-alpha.1", path = "crates/xbrl-dimensions" }
xbrl-linkbases = { version = "0.1.0-alpha.1", path = "crates/xbrl-linkbases" }
xbrl-report-types = { version = "0.1.0-alpha.1", path = "crates/xbrl-report-types" }
xbrl-stream = { version = "0.1.0-alpha.1", path = "crates/xbrl-stream" }
xbrl-units = { version = "0.1.0-alpha.1", path = "crates/xbrl-units" }
xbrlkit-bdd = { version = "0.1.0-alpha.1", path = "crates/xbrlkit-bdd" }
xbrlkit-bdd-steps = { version = "0.1.0-alpha.1", path = "crates/xbrlkit-bdd-steps" }
xbrlkit-cli = { version = "0.1.0-alpha.1", path = "crates/xbrlkit-cli" }
xbrlkit-conform = { version = "0.1.0-alpha.1", path = "crates/xbrlkit-conform" }
xbrlkit-core = { version = "0.1.0-alpha.1", path = "crates/xbrlkit-core" }
xbrlkit-feature-grid = { version = "0.1.0-alpha.1", path = "crates/xbrlkit-feature-grid" }
xbrlkit-interop-tests = { version = "0.1.0-alpha.1", path = "crates/xbrlkit-interop-tests" }
xbrlkit-test-grid = { version = "0.1.0-alpha.1", path = "crates/xbrlkit-test-grid" }

[workspace.lints.rust]
rust_2018_idioms = { level = "warn", priority = -1 }
unused_lifetimes = "warn"
unused_qualifications = "warn"
missing_docs = "allow"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
