[package]
name = "xtask"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "xtask"
path = "src/main.rs"

[dependencies]
serde.workspace = true
anyhow.workspace = true
clap.workspace = true
serde_json.workspace = true
chrono = { version = "0.4", features = ["serde"] }
scenario-contract = { path = "../crates/scenario-contract" }
xbrlkit-feature-grid = { path = "../crates/xbrlkit-feature-grid" }
cockpit-export = { path = "../crates/cockpit-export" }
receipt-types = { path = "../crates/receipt-types" }
xbrlkit-bdd = { path = "../crates/xbrlkit-bdd" }
scenario-runner = { path = "../crates/scenario-runner" }

[lints]
workspace = true
