[package]
name = "xtask"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[[bin]]
name = "xtask"
path = "src/main.rs"

[dependencies]
serde.workspace = true
anyhow.workspace = true
clap.workspace = true
serde_json.workspace = true
chrono = { version = "0.4", features = ["serde"] }
scenario-contract.workspace = true
xbrlkit-feature-grid.workspace = true
cockpit-export.workspace = true
receipt-types.workspace = true
xbrlkit-bdd.workspace = true
scenario-runner.workspace = true

[lints]
workspace = true
