[package]
name = "xbrlkit-cockpit-export"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
receipt-types.workspace = true
serde_json.workspace = true

[lints]
workspace = true
