[package]
name = "context-completeness"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "XBRL context completeness validation"

[dependencies]
xbrl-report-types = { path = "../xbrl-report-types" }
xbrl-contexts = { path = "../xbrl-contexts" }

[dev-dependencies]
# Test dependencies added as needed
