[package]
name = "xbrlkit-context-completeness"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "XBRL context completeness validation"

[dependencies]
xbrl-report-types.workspace = true
xbrl-contexts.workspace = true

[dev-dependencies]
# Test dependencies added as needed
