[package]
name = "diff-run"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
receipt-types = { path = "../receipt-types" }
xbrl-report-types = { path = "../xbrl-report-types" }

[lints]
workspace = true
