[package]
name = "dimensional-rules"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
serde = { workspace = true }
thiserror = { workspace = true }
xbrl-contexts = { path = "../xbrl-contexts" }
taxonomy-dimensions = { path = "../taxonomy-dimensions" }
xbrl-report-types = { path = "../xbrl-report-types" }

[lints]
workspace = true
