[package]
name = "xbrlkit-dimensional-rules"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
serde = { workspace = true }
thiserror = { workspace = true }
xbrl-contexts.workspace = true
taxonomy-dimensions.workspace = true
xbrl-report-types.workspace = true

[lints]
workspace = true
