[package]
name = "dimensional-rules"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
xbrl-contexts = { path = "../xbrl-contexts" }
taxonomy-dimensions = { path = "../taxonomy-dimensions" }
xbrl-report-types = { path = "../xbrl-report-types" }

[lints]
workspace = true
