[package]
name = "efm-rules"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
xbrl-report-types = { path = "../xbrl-report-types" }
sec-profile-types = { path = "../sec-profile-types" }
ixhtml-scan = { path = "../ixhtml-scan" }
taxonomy-dts = { path = "../taxonomy-dts" }

[lints]
workspace = true
