[package]
name = "efm-rules"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
xbrl-report-types.workspace = true
sec-profile-types.workspace = true
ixhtml-scan.workspace = true
taxonomy-dts.workspace = true

[lints]
workspace = true
