[package]
name = "export-run"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
serde_json.workspace = true
receipt-types = { path = "../receipt-types" }
oim-normalize = { path = "../oim-normalize" }
xbrl-report-types = { path = "../xbrl-report-types" }

[lints]
workspace = true
