[package]
name = "filing-load"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
edgar-sgml = { path = "../edgar-sgml" }
edgar-attachments = { path = "../edgar-attachments" }
receipt-types = { path = "../receipt-types" }

[lints]
workspace = true
