[package]
name = "xbrlkit-filing-load"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
edgar-sgml.workspace = true
edgar-attachments.workspace = true
receipt-types.workspace = true

[lints]
workspace = true
