[package]
name = "ixds-assemble"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
xbrl-report-types = { path = "../xbrl-report-types" }
ixhtml-scan = { path = "../ixhtml-scan" }

[lints]
workspace = true
