[package]
name = "xbrlkit-ixds-assemble"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
xbrl-report-types.workspace = true
ixhtml-scan.workspace = true

[lints]
workspace = true
