[package]
name = "xbrlkit-oim-normalize"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
serde_json.workspace = true
xbrl-report-types.workspace = true

[lints]
workspace = true
