[package]
name = "xbrlkit-scenario-contract"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true
publish = false

[lib]
path = "src/lib.rs"

[dependencies]
serde.workspace = true
serde_json.workspace = true

[lints]
workspace = true
