[package]
name = "scenario-runner"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[lib]
path = "src/lib.rs"

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
scenario-contract.workspace = true
receipt-types.workspace = true
sec-profile-types.workspace = true
validation-run.workspace = true
export-run.workspace = true
xbrl-report-types.workspace = true

[lints]
workspace = true
