[package]
name = "xbrlkit-sec-profile-types"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_yaml.workspace = true
taxonomy-types.workspace = true

[lints]
workspace = true
