[package]
name = "taxonomy-dimensions"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
serde = { workspace = true }
thiserror = { workspace = true }
taxonomy-types = { path = "../taxonomy-types" }

[lints]
workspace = true
