[package]
name = "taxonomy-dimensions"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
serde = { workspace = true }
thiserror = { workspace = true }

[lints]
workspace = true
