[package]
name = "xbrlkit-taxonomy-dts"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
taxonomy-types.workspace = true
sec-profile-types.workspace = true

[lints]
workspace = true
