[package]
name = "taxonomy-loader"
edition.workspace = true
version.workspace = true
license.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
description = "XBRL taxonomy loading from XSD and linkbase files"

[dependencies]
roxmltree = "0.20"
thiserror.workspace = true
taxonomy-dimensions = { path = "../taxonomy-dimensions" }
reqwest = { version = "0.12", features = ["rustls-tls", "blocking"], default-features = false }
url = "2.5"

[lints]
workspace = true

[dev-dependencies]
serde_json.workspace = true
wiremock = "0.6"
tempfile = "3"
tokio = { workspace = true }
