[package]
name = "xbrlkit-taxonomy-loader"
edition.workspace = true
version.workspace = true
license.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
description = "XBRL taxonomy loading from XSD and linkbase files"

[dependencies]
roxmltree = "0.20"
thiserror.workspace = true
taxonomy-dimensions.workspace = true
reqwest = { version = "0.12", features = ["rustls-tls", "blocking"], default-features = false }
url = "2.5"

[lints]
workspace = true

[dev-dependencies]
serde_json.workspace = true
tempfile = "3"
tokio = { workspace = true }
