[package]
name = "unit-rules"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "XBRL unit consistency validation rules"

[dependencies]
xbrl-report-types.workspace = true
sec-profile-types.workspace = true
regex = "1.10"
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
# Test dependencies added as needed
