[package]
name = "unit-rules"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "XBRL unit consistency validation rules"

[dependencies]
xbrl-report-types = { path = "../xbrl-report-types" }
sec-profile-types = { path = "../sec-profile-types" }
regex = "1.10"

[dev-dependencies]
# Test dependencies added as needed
