[package]
name = "validation-run"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
receipt-types = { path = "../receipt-types" }
sec-profile-types = { path = "../sec-profile-types" }
ixds-assemble = { path = "../ixds-assemble" }
efm-rules = { path = "../efm-rules" }
duplicate-facts = { path = "../duplicate-facts" }
xbrl-report-types = { path = "../xbrl-report-types" }
xbrl-contexts = { path = "../xbrl-contexts" }
taxonomy-dts = { path = "../taxonomy-dts" }
taxonomy-types = { path = "../taxonomy-types" }
taxonomy-dimensions = { path = "../taxonomy-dimensions" }

[lints]
workspace = true
