[package]
name = "validation-run"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
receipt-types.workspace = true
sec-profile-types.workspace = true
ixds-assemble.workspace = true
efm-rules.workspace = true
duplicate-facts.workspace = true
xbrl-report-types.workspace = true
numeric-rules.workspace = true
xbrl-contexts.workspace = true
taxonomy-dts.workspace = true
taxonomy-types.workspace = true
taxonomy-dimensions.workspace = true
dimensional-rules.workspace = true
xbrl-stream.workspace = true
anyhow = "1.0"

[lints]
workspace = true
