[package]
name = "xbrlkit-bdd-steps"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
anyhow.workspace = true
serde_json.workspace = true
walkdir.workspace = true
scenario-contract = { path = "../scenario-contract" }
scenario-runner = { path = "../scenario-runner" }
dimensional-rules = { path = "../dimensional-rules" }
taxonomy-dimensions = { path = "../taxonomy-dimensions" }
xbrl-contexts = { path = "../xbrl-contexts" }
cockpit-export = { path = "../cockpit-export" }
receipt-types = { path = "../receipt-types" }
filing-load = { path = "../filing-load" }
edgar-attachments = { path = "../edgar-attachments" }
xbrlkit-feature-grid = { path = "../xbrlkit-feature-grid" }
sec-profile-types = { path = "../sec-profile-types" }
context-completeness = { path = "../context-completeness" }
xbrl-report-types = { path = "../xbrl-report-types" }

[lints]
workspace = true
