[package]
name = "xbrlkit-bdd-steps"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[lib]
path = "src/lib.rs"

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
walkdir.workspace = true
scenario-contract.workspace = true
scenario-runner.workspace = true
dimensional-rules.workspace = true
taxonomy-dimensions.workspace = true
xbrl-contexts.workspace = true
cockpit-export.workspace = true
receipt-types.workspace = true
filing-load.workspace = true
edgar-attachments.workspace = true
xbrlkit-feature-grid.workspace = true
sec-profile-types.workspace = true
context-completeness.workspace = true
xbrl-report-types.workspace = true
numeric-rules.workspace = true
xbrl-stream.workspace = true
taxonomy-loader.workspace = true

[lints]
workspace = true
