[package]
name = "xbrlkit-bdd"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[lib]
path = "src/lib.rs"

[dependencies]
anyhow.workspace = true
walkdir.workspace = true
scenario-contract.workspace = true
receipt-types.workspace = true
xbrlkit-bdd-steps.workspace = true

[lints]
workspace = true
