[package]
name = "xbrlkit-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true
publish = false

[[bin]]
name = "xbrlkit-cli"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
corpus-fs.workspace = true
sec-profile-types.workspace = true
validation-run.workspace = true
export-run.workspace = true
render-json.workspace = true
xbrl-report-types.workspace = true
xbrl-contexts.workspace = true
taxonomy-loader.workspace = true
taxonomy-dimensions.workspace = true

[lints]
workspace = true
