[package]
name = "xbrlkit-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
receipt-types = { path = "../receipt-types" }
scenario-contract = { path = "../scenario-contract" }
xbrl-report-types = { path = "../xbrl-report-types" }
sec-profile-types = { path = "../sec-profile-types" }
validation-run = { path = "../validation-run" }
export-run = { path = "../export-run" }
diff-run = { path = "../diff-run" }

[lints]
workspace = true
