[package]
name = "xbrlkit-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
receipt-types.workspace = true
xbrl-report-types.workspace = true
sec-profile-types.workspace = true
validation-run.workspace = true
export-run.workspace = true
diff-run.workspace = true

[lints]
workspace = true
