[package]
name = "xbrlkit-feature-grid"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_yaml.workspace = true
walkdir.workspace = true
scenario-contract = { path = "../scenario-contract" }

[lints]
workspace = true
